
Package: psCBS
==============

Version: 0.9.49 [2011-04-11]
o Updated estimateTauABBySmallDH() for PairedPSCBS to use a
  "symmetric" quantile estimator.
o Added argument 'midpoint' to estimateTauLOHByMinC1AtNonAB().


Version: 0.9.48 [2011-04-10]
o Added callLOH() for PairedPSCBS, which in turn calls 
  auxillary methods.
o Added estimateTauLOH() for PairedPSCBS, which in turn calls 
  auxillary methods.
o Now callAB(..., force=FALSE) skips the caller if
  allelic-balance calls already exist.
o DOCUMENTATION: Update the exampe for segmentByPairedPSCBS
  to reflect the restructured AB and LOH callers.


Version: 0.9.47 [2011-04-08]
o Added estimateTauABBySmallDH()
o Added internal weightedQuantile().
o DOCUMENTATION: Added help pages for more methods.
o CLEANUP: Started to restructure the source code files.


Version: 0.9.46 [2011-04-08]
o BUG FIX: postsegmentTCN() for PairedPSCBS could generate an invalid
  'tcnSegRows' matrix, where the indices for two consecutive segments
  would overlap, which is invalid.  This was caught with real data,
  but it seems to have required a very rare combination of data in
  order for it to occur.


Version: 0.9.45 [2011-04-05]
o BUG FIX: estimateHighDHQuantileAtAB() for PairedPSCBS would throw
  an error on an undefined 'trim' if verbose output was used.


Version: 0.9.44 [2011-02-18]
o Added estimateHighDHQuantileAtAB() for PairedPSCBS.


Version: 0.9.43 [2011-02-06]
o BUG FIX: plotTracks2() queired non-existing argument 'tracks'.


Version: 0.9.42 [2011-02-03]
o Added estimateKappa() for estimating the normal contamination.


Version: 0.9.41 [2011-02-02]
o Updated default for 'tauAB' of callABandHighAI() and callABandLowC1()
  to be estimated from data using estimateTauAB().
o Added argument 'tauTCN' to estimateTauAB().


Version: 0.9.40 [2011-01-27]
o Added argument 'flavor' to estimateTauAB() for estimating the
  AB threshold using alternative methods.


Version: 0.9.39 [2011-01-19]